# jetbrains-assignment

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  devenv.nix  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
gradle/: libs.versions.toml
modules/zstd-jni/: README.md  build.gradle.kts
modules/zstd-jni/src/main/java/com/github/chenlijun99/jetbrainsassignment/zstd/: Zstd.java  ZstdException.java
modules/zstd-jni/src/main/native/: CMakeLists.txt  com_github_chenlijun99_jetbrainsassignment_zstd_Zstd.h  download_jni_headers.sh  zstd.c
modules/zstd-jni/src/main/native/cmake/toolchains/: aarch64-linux-gnu.cmake  aarch64-macos-none.cmake  aarch64-windows-gnu.cmake  x86_64-linux-gnu.cmake  x86_64-macos-none.cmake  x86_64-windows-gnu.cmake
modules/zstd-jni/src/main/native/jni_headers/: CMakeLists.txt
modules/zstd-jni/src/test/kotlin/com/github/chenlijun99/jetbrainsassignment/zstd/: ZstdTest.kt
nix/: default.nix  kotlin-lsp.nix
scripts/: release.sh
src/main/kotlin/com/github/chenlijun99/jetbrainsassignment/: Bundle.kt  Constants.kt  MyBundle.kt  ZstdCompressAction.kt  ZstdCompressAsAction.kt  ZstdCompressionUtil.kt
src/main/kotlin/com/github/chenlijun99/jetbrainsassignment/coroutine/: AppDispatchers.kt
src/main/kotlin/com/github/chenlijun99/jetbrainsassignment/services/: MyProjectService.kt  ZstdCompressionService.kt
src/main/kotlin/com/github/chenlijun99/jetbrainsassignment/startup/: MyProjectActivity.kt
src/main/kotlin/com/github/chenlijun99/jetbrainsassignment/toolWindow/: MyToolWindowFactory.kt
src/main/resources/messages/: Bundle.properties  Bundle_zh_CN.properties
src/test/kotlin/com/github/chenlijun99/jetbrainsassignment/: MyPluginTest.kt
src/test/kotlin/com/github/chenlijun99/jetbrainsassignment/coroutine/: TestAppDispatchers.kt  dispatch.kt
src/test/kotlin/com/github/chenlijun99/jetbrainsassignment/services/: ZstdCompressionServiceTest.kt
utils/: Dockerfile
